# VO2max_Calories

./: README.md  VO2max_Brigham_Young.py  VO2max_Rockport.py  VO2max_ntnu.py  calories_VO2max.py  pyproject.toml
