[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VO2max_ntnu.py", "calories_VO2max.py", "VO2max_Rockport.py",
	    "VO2max_Brigham_Young.py"]

[project]
name = "VO2max"
version = "1.0"
dependencies = [
  "numpy",
  "matplotlib",
]
requires-python = ">=3.9"
authors = [
  {name = "Wing-Fai Thi", email = "wingfai.thi@googlemail.com"},
]
description = "Fitness - VO2max - Calories from exercises"
readme = "README.md"
license = {file = "LICENSE"}
keywords = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.9"
]

[project.urls]
Homepage = ""
Repository = "https://github.com/wfthi/VO2max_Calories"
